// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Regression Snapshot Test Harness > Golden Snapshot: Cloud Deployment (AWS ECS + Docker) 1`] = `
"# ==============================================================================
# Generated by Auto GitHub Actions (auto-gha)
# Workflow: Docker Build, Deploy to Amazon ECS, Publish Docker Image (GHCR) (3 jobs)
# Configuration: Parallel DAG | Dependency Caching: Enabled | Production Hardening: Enabled
# ==============================================================================

name: CI/CD Pipeline
on:
  push:
    branches:
      - main
  pull_request:
    branches:
      - main
permissions:
  contents: read
concurrency:
  group: \${{ github.workflow }}-\${{ github.ref }}
  cancel-in-progress: true
jobs:
  build-docker:
    name: Docker Build
    runs-on: ubuntu-latest
    timeout-minutes: 15
    steps:
      - uses: actions/checkout@v4
      - uses: docker/build-push-action@v6
        with:
          push: false
          file: Dockerfile
          context: .
  deploy-aws:
    name: Deploy to Amazon ECS
    runs-on: ubuntu-latest
    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
    environment: production
    timeout-minutes: 15
    steps:
      - uses: actions/checkout@v4
      - uses: aws-actions/configure-aws-credentials@v4
        with:
          aws-access-key-id: \${{ secrets.AWS_ACCESS_KEY_ID }}
          aws-secret-access-key: \${{ secrets.AWS_SECRET_ACCESS_KEY }}
          aws-region: \${{ vars.AWS_REGION || 'us-east-1' }}
      - uses: aws-actions/amazon-ecr-login@v2
      - uses: aws-actions/amazon-ecs-deploy-task-definition@v2
        with:
          task-definition: task-definition.json
          service: \${{ vars.ECS_SERVICE }}
          cluster: \${{ vars.ECS_CLUSTER }}
          wait-for-service-stability: true
  deploy-ghcr:
    name: Publish Docker Image (GHCR)
    runs-on: ubuntu-latest
    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
    timeout-minutes: 15
    permissions:
      contents: read
      packages: write
    steps:
      - uses: actions/checkout@v4
      - uses: docker/login-action@v3
        with:
          registry: ghcr.io
          username: \${{ github.actor }}
          password: \${{ secrets.GITHUB_TOKEN }}
      - uses: docker/metadata-action@v5
        with:
          images: ghcr.io/\${{ github.repository }}
      - uses: docker/build-push-action@v6
        with:
          push: true
          tags: \${{ steps.ghcr-meta.outputs.tags }}
          labels: \${{ steps.ghcr-meta.outputs.labels }}
          file: Dockerfile
          context: .
"
`;

exports[`Regression Snapshot Test Harness > Golden Snapshot: Cloud Deployment (Kubernetes) 1`] = `
"# ==============================================================================
# Generated by Auto GitHub Actions (auto-gha)
# Workflow: Deploy to Kubernetes (1 job)
# Configuration: Parallel DAG | Dependency Caching: Enabled | Production Hardening: Enabled
# ==============================================================================

name: CI/CD Pipeline
on:
  push:
    branches:
      - main
  pull_request:
    branches:
      - main
permissions:
  contents: read
concurrency:
  group: \${{ github.workflow }}-\${{ github.ref }}
  cancel-in-progress: true
jobs:
  deploy-k8s:
    name: Deploy to Kubernetes
    runs-on: ubuntu-latest
    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
    environment: production
    timeout-minutes: 15
    steps:
      - uses: actions/checkout@v4
      - uses: azure/setup-helm@v4.2.0
      - run: helm upgrade --install release . --wait
"
`;

exports[`Regression Snapshot Test Harness > Golden Snapshot: Cloud Deployment (Terraform) 1`] = `
"# ==============================================================================
# Generated by Auto GitHub Actions (auto-gha)
# Workflow: Terraform Apply (1 job)
# Configuration: Parallel DAG | Dependency Caching: Enabled | Production Hardening: Enabled
# ==============================================================================

name: CI/CD Pipeline
on:
  push:
    branches:
      - main
  pull_request:
    branches:
      - main
permissions:
  contents: read
concurrency:
  group: \${{ github.workflow }}-\${{ github.ref }}
  cancel-in-progress: true
jobs:
  deploy-terraform:
    name: Terraform Apply
    runs-on: ubuntu-latest
    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
    environment: production
    timeout-minutes: 15
    steps:
      - uses: actions/checkout@v4
      - uses: hashicorp/setup-terraform@v3
      - run: terraform init
      - run: terraform apply -auto-approve
"
`;

exports[`Regression Snapshot Test Harness > Golden Snapshot: Polyglot Monorepo (Node + Python + Docker) 1`] = `
"# ==============================================================================
# Generated by Auto GitHub Actions (auto-gha)
# Workflow: Node.js CI, Python CI, Docker Build, Publish Docker Image (GHCR) (4 jobs)
# Configuration: Parallel DAG | Dependency Caching: Enabled | Production Hardening: Enabled
# ==============================================================================

name: CI/CD Pipeline
on:
  push:
    branches:
      - main
  pull_request:
    branches:
      - main
permissions:
  contents: read
concurrency:
  group: \${{ github.workflow }}-\${{ github.ref }}
  cancel-in-progress: true
jobs:
  test-node:
    name: Node.js CI
    runs-on: ubuntu-latest
    timeout-minutes: 15
    steps:
      - uses: actions/checkout@v4
      - uses: actions/setup-node@v4
        with:
          node-version: 20.x
          cache: npm
          cache-dependency-path: "**/package-lock.json"
  test-python:
    name: Python CI
    runs-on: ubuntu-latest
    timeout-minutes: 15
    steps:
      - uses: actions/checkout@v4
      - uses: actions/setup-python@v5
        with:
          python-version: 3.x
          cache: pip
          cache-dependency-path: "**/requirements.txt"
      - run: python -m pip install --upgrade pip pytest && if [ -f requirements.txt ]; then pip install -r requirements.txt; fi && for req in $(find . -name 'requirements.txt' -not -path '*/.*' -not -path './requirements.txt'); do pip install -r "$req"; done
      - run: pytest || [ $? -eq 5 ]
  build-docker:
    name: Docker Build
    runs-on: ubuntu-latest
    timeout-minutes: 15
    needs:
      - test-node
      - test-python
    steps:
      - uses: actions/checkout@v4
      - uses: docker/build-push-action@v6
        with:
          push: false
          file: Dockerfile
          context: .
  deploy-ghcr:
    name: Publish Docker Image (GHCR)
    runs-on: ubuntu-latest
    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
    timeout-minutes: 15
    needs:
      - test-node
      - test-python
    permissions:
      contents: read
      packages: write
    steps:
      - uses: actions/checkout@v4
      - uses: docker/login-action@v3
        with:
          registry: ghcr.io
          username: \${{ github.actor }}
          password: \${{ secrets.GITHUB_TOKEN }}
      - uses: docker/metadata-action@v5
        with:
          images: ghcr.io/\${{ github.repository }}
      - uses: docker/build-push-action@v6
        with:
          push: true
          tags: \${{ steps.ghcr-meta.outputs.tags }}
          labels: \${{ steps.ghcr-meta.outputs.labels }}
          file: Dockerfile
          context: .
"
`;

exports[`Regression Snapshot Test Harness > Golden Snapshot: Single-Stack .NET with Solution 1`] = `
"# ==============================================================================
# Generated by Auto GitHub Actions (auto-gha)
# Workflow: .NET CI (1 job)
# Configuration: Parallel DAG | Dependency Caching: Enabled | Production Hardening: Enabled
# ==============================================================================

name: CI/CD Pipeline
on:
  push:
    branches:
      - main
  pull_request:
    branches:
      - main
permissions:
  contents: read
concurrency:
  group: \${{ github.workflow }}-\${{ github.ref }}
  cancel-in-progress: true
jobs:
  test-dotnet:
    name: .NET CI
    runs-on: ubuntu-latest
    timeout-minutes: 15
    steps:
      - uses: actions/checkout@v4
      - uses: actions/setup-dotnet@v4
        with:
          dotnet-version: 8.0.x
      - run: if ls *.sln 1> /dev/null 2>&1 || ls *.csproj 1> /dev/null 2>&1 || ls *.fsproj 1> /dev/null 2>&1; then dotnet restore && dotnet build --no-restore; else for proj in $(find . -maxdepth 5 \\( -name '*.sln' -o -name '*.csproj' -o -name '*.fsproj' \\) -not -path '*/.*' -not -path '*/bin/*' -not -path '*/obj/*' | sort -u); do echo "Building $proj..." && dotnet restore "$proj" && dotnet build "$proj" --no-restore; done; fi
      - run: if ls *.sln 1> /dev/null 2>&1 || ls *Test*.csproj 1> /dev/null 2>&1 || ls *test*.csproj 1> /dev/null 2>&1; then dotnet test --no-build --verbosity normal || dotnet test --verbosity normal; else for proj in $(find . -maxdepth 5 \\( -name '*.sln' -o -name '*Test*.csproj' -o -name '*test*.csproj' \\) -not -path '*/.*' -not -path '*/bin/*' -not -path '*/obj/*' | sort -u); do echo "Testing $proj..." && dotnet test "$proj" --verbosity normal; done; fi
"
`;

exports[`Regression Snapshot Test Harness > Golden Snapshot: Single-Stack Go 1`] = `
"# ==============================================================================
# Generated by Auto GitHub Actions (auto-gha)
# Workflow: Go CI (1 job)
# Configuration: Parallel DAG | Dependency Caching: Enabled | Production Hardening: Enabled
# ==============================================================================

name: CI/CD Pipeline
on:
  push:
    branches:
      - main
  pull_request:
    branches:
      - main
permissions:
  contents: read
concurrency:
  group: \${{ github.workflow }}-\${{ github.ref }}
  cancel-in-progress: true
jobs:
  test-go:
    name: Go CI
    runs-on: ubuntu-latest
    timeout-minutes: 15
    steps:
      - uses: actions/checkout@v4
      - uses: actions/setup-go@v5
        with:
          go-version: "1.22"
          cache: true
      - run: if [ -f go.mod ]; then go build -v ./...; else for mod in $(find . -name 'go.mod' -not -path '*/.*'); do (cd "$(dirname "$mod")" && echo "Building $(dirname "$mod")..." && go build -v ./...); done; fi
      - run: if [ -f go.mod ]; then go test -v ./...; else for mod in $(find . -name 'go.mod' -not -path '*/.*'); do (cd "$(dirname "$mod")" && echo "Testing $(dirname "$mod")..." && go test -v ./...); done; fi
"
`;

exports[`Regression Snapshot Test Harness > Golden Snapshot: Single-Stack Java with Maven 1`] = `
"# ==============================================================================
# Generated by Auto GitHub Actions (auto-gha)
# Workflow: Java CI (1 job)
# Configuration: Parallel DAG | Dependency Caching: Enabled | Production Hardening: Enabled
# ==============================================================================

name: CI/CD Pipeline
on:
  push:
    branches:
      - main
  pull_request:
    branches:
      - main
permissions:
  contents: read
concurrency:
  group: \${{ github.workflow }}-\${{ github.ref }}
  cancel-in-progress: true
jobs:
  test-java:
    name: Java CI
    runs-on: ubuntu-latest
    timeout-minutes: 15
    steps:
      - uses: actions/checkout@v4
      - uses: actions/setup-java@v4
        with:
          java-version: "17"
          distribution: temurin
      - run: if [ -f pom.xml ]; then mvn -B package --file pom.xml; else for pom in $(find . -name 'pom.xml' -not -path '*/.*'); do mvn -B package --file "$pom"; done; fi
"
`;

exports[`Regression Snapshot Test Harness > Golden Snapshot: Single-Stack Node.js with pnpm and vitest 1`] = `
"# ==============================================================================
# Generated by Auto GitHub Actions (auto-gha)
# Workflow: Node.js CI (1 job)
# Configuration: Parallel DAG | Dependency Caching: Enabled | Production Hardening: Enabled
# ==============================================================================

name: CI/CD Pipeline
on:
  push:
    branches:
      - main
  pull_request:
    branches:
      - main
permissions:
  contents: read
concurrency:
  group: \${{ github.workflow }}-\${{ github.ref }}
  cancel-in-progress: true
jobs:
  test-node:
    name: Node.js CI
    runs-on: ubuntu-latest
    timeout-minutes: 15
    steps:
      - uses: actions/checkout@v4
      - uses: pnpm/action-setup@v4
      - uses: actions/setup-node@v4
        with:
          node-version: 20.x
          cache: pnpm
      - run: pnpm test --if-present
      - run: npm run test -- --run
"
`;

exports[`Regression Snapshot Test Harness > Golden Snapshot: Single-Stack Python with pytest 1`] = `
"# ==============================================================================
# Generated by Auto GitHub Actions (auto-gha)
# Workflow: Python CI (1 job)
# Configuration: Parallel DAG | Dependency Caching: Enabled | Production Hardening: Enabled
# ==============================================================================

name: CI/CD Pipeline
on:
  push:
    branches:
      - main
  pull_request:
    branches:
      - main
permissions:
  contents: read
concurrency:
  group: \${{ github.workflow }}-\${{ github.ref }}
  cancel-in-progress: true
jobs:
  test-python:
    name: Python CI
    runs-on: ubuntu-latest
    timeout-minutes: 15
    steps:
      - uses: actions/checkout@v4
      - uses: actions/setup-python@v5
        with:
          python-version: 3.x
          cache: pip
      - run: python -m pip install --upgrade pip pytest && if [ -f requirements.txt ]; then pip install -r requirements.txt; fi && for req in $(find . -name 'requirements.txt' -not -path '*/.*' -not -path './requirements.txt'); do pip install -r "$req"; done
      - run: pytest || [ $? -eq 5 ]
"
`;

exports[`Regression Snapshot Test Harness > Golden Snapshot: Single-Stack Rust 1`] = `
"# ==============================================================================
# Generated by Auto GitHub Actions (auto-gha)
# Workflow: Rust CI (1 job)
# Configuration: Parallel DAG | Dependency Caching: Enabled | Production Hardening: Enabled
# ==============================================================================

name: CI/CD Pipeline
on:
  push:
    branches:
      - main
  pull_request:
    branches:
      - main
permissions:
  contents: read
concurrency:
  group: \${{ github.workflow }}-\${{ github.ref }}
  cancel-in-progress: true
jobs:
  test-rust:
    name: Rust CI
    runs-on: ubuntu-latest
    timeout-minutes: 15
    steps:
      - uses: actions/checkout@v4
      - name: Cache Rust Dependencies
        uses: actions/cache@v4
        with:
          path: |-
            ~/.cargo/registry
            ~/.cargo/git
            target
          key: \${{ runner.os }}-cargo-\${{ hashFiles('**/Cargo.lock') }}
          restore-keys: \${{ runner.os }}-cargo-
      - run: if [ -f Cargo.toml ]; then cargo build --verbose; else for toml in $(find . -name 'Cargo.toml' -not -path '*/.*' -not -path '*/target/*'); do (cd "$(dirname "$toml")" && echo "Building $(dirname "$toml")..." && cargo build --verbose); done; fi
      - run: if [ -f Cargo.toml ]; then cargo test --verbose; else for toml in $(find . -name 'Cargo.toml' -not -path '*/.*' -not -path '*/target/*'); do (cd "$(dirname "$toml")" && echo "Testing $(dirname "$toml")..." && cargo test --verbose); done; fi
"
`;
